--- a/default.hbs
+++ b/default.hbs
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
     <link rel="stylesheet" type="text/css" href="{{asset "css/application.css"}}" />
-    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.lug.ustc.edu.cn/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
     {{ghost_head}}
   </head>
   <body>
@@ -27,10 +27,10 @@
         <p class="small">Powered by <a href="https://ghost.org" target="_blank">Ghost</a> | Theme - <a href="https://github.com/imgarylai/text" target="_blank">text</a></p>
       </footer>
     </div>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/highlight.min.js"></script>
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.bootcss.com/highlight.js/9.4.0/highlight.min.js"></script>
     <script type="text/javascript" src="{{asset "js/highlightjs-line-numbers.min.js"}}" ></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/styles/github.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/highlight.js/9.4.0/styles/github.min.css">
     <script>
       hljs.initHighlightingOnLoad();
     </script>
