--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -427,7 +427,7 @@ html {
 }
 
 body {
-  font-family: 'Lato', 'Helvetica Neue', "Hiragino Sans GB", "Microsoft YaHei","WenQuanYi Micro Hei", Helvetica, sans-serif;
+  font-family: -apple-system, "Helvetica Neue", Helvetica, "Nimbus Sans L", Arial, "Liberation Sans", "PingFang SC", "Hiragino Sans GB", "Source Han Sans CN", "Source Han Sans SC", "Microsoft YaHei", "Wenquanyi Micro Hei", "WenQuanYi Zen Hei", "ST Heiti", SimHei, "WenQuanYi Zen Hei Sharp", sans-serif;
   font-size: 1.8rem;
   font-weight: 300;
   height: 100%;
