--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -434,6 +434,11 @@ body {
   max-height: 100%;
   letter-spacing: 0.01rem;
   color: #3a4145;
+  text-align: justify;
+　text-justify: inter-ideograph;
+　-ms-text-justify: inter-ideograph; /*IE9*/
+　-moz-text-align-last:justify; /*Firefox*/
+　-webkit-text-align-last:justify; /*Chrome*/
   -webkit-font-feature-settings: 'kern' 1;
      -moz-font-feature-settings: 'kern' 1;
        -o-font-feature-settings: 'kern' 1;
