--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -434,6 +434,7 @@ body {
   max-height: 100%;
   letter-spacing: 0.01rem;
   color: #3a4145;
+  line-height: 1.7em;
   text-align: justify;
 　text-justify: inter-ideograph;
 　-ms-text-justify: inter-ideograph; /*IE9*/
