--- a/default.hbs
+++ b/default.hbs
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
     <link rel="stylesheet" type="text/css" href="{{asset "css/application.css"}}" />
+    <script src="https://cdn.bootcss.com/pangu/3.3.0/pangu.min.js"></script>
     {{ghost_head}}
   </head>
   <body>
@@ -26,6 +27,9 @@
         <p class="small">Powered by <a href="https://ghost.org" target="_blank">Ghost</a> | Theme - <a href="https://github.com/imgarylai/text" target="_blank">text</a></p>
       </footer>
     </div>
+    <script>
+	    pangu.spacingPage();
+    </script>
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.bootcss.com/highlight.js/9.4.0/highlight.min.js"></script>
     <script type="text/javascript" src="{{asset "js/highlightjs-line-numbers.min.js"}}" ></script>
