--- a/default.hbs
+++ b/default.hbs
@@ -26,13 +26,13 @@
         <p class="small">Powered by <a href="https://ghost.org" target="_blank">Ghost</a> | Theme - <a href="https://github.com/imgarylai/text" target="_blank">text</a></p>
       </footer>
     </div>
-    <script src="https://cdn.bootcss.com/pangu/3.3.0/pangu.min.js"></script>
+    <script src="https://js.cdnbee.com/libs/pangu/3.3.0/pangu.min.js"></script>
     <script>
 	    pangu.spacingPage();
     </script>
-    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.bootcss.com/highlight.js/9.4.0/highlight.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.bootcss.com/highlight.js/9.4.0/styles/github.min.css">
+    <script type="text/javascript" src="https://js.cdnbee.com/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="https://js.cdnbee.com/libs/highlight.js/9.9.0/highlight.min.js"></script>
+    <link rel="stylesheet" href="https://js.cdnbee.com/libs/highlight.js/9.9.0/styles/github.min.css">
     <script>
       hljs.initHighlightingOnLoad();
     </script>
