--- a/error.hbs
+++ b/error.hbs
@@ -42,7 +42,7 @@
     </div>
     <footer class="center">
       <p class="small"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</p>
-      <p class="small">Powered by <a href="https://ghost.org" target="_blank">Ghost</a> | Theme - <a href="https://github.com/imgarylai/text" target="_blank">text</a></p>
+      <p class="small">Powered by <a href="https://ghost.org" target="_blank">Ghost</a> | Theme - <a href="https://github.com/Windfarer/text" target="_blank">modified text</a></p>
     </footer>
   </div>
 </body>
