update number style

--- a/assets/css/error.css
+++ b/assets/css/error.css
@@ -535,9 +535,9 @@ a:hover.post-excerpt {
 }
 
 p, ul, ol, dl {
-  -webkit-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
-     -moz-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
-       -o-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
+  -webkit-font-feature-settings: 'liga' 1, 'lnum' 1, 'kern' 1;
+     -moz-font-feature-settings: 'liga' 1, 'lnum' 1, 'kern' 1;
+       -o-font-feature-settings: 'liga' 1, 'lnum' 1, 'kern' 1;
   text-rendering: geometricPrecision;
 }
 
