--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -433,7 +433,7 @@ body {
   height: 100%;
   max-height: 100%;
   letter-spacing: 0.01rem;
-  color: #3a4145;
+  color: #333333;
   -webkit-font-feature-settings: 'kern' 1;
      -moz-font-feature-settings: 'kern' 1;
        -o-font-feature-settings: 'kern' 1;
