--- a/default.hbs
+++ b/default.hbs
@@ -23,7 +23,7 @@
       {{{body}}}
       <footer class="center">
         <p class="small"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</p>
-        <p class="small">Powered by <a href="https://ghost.org" target="_blank">Ghost</a> | Theme - <a href="https://github.com/Windfarer/text" target="_blank">modified text</a></p>
+        <p class="small">Powered by <a href="https://ghost.org" target="_blank">Ghost</a> | Theme - <a href="https://github.com/Windfarer/text" target="_blank">text</a></p>
       </footer>
     </div>
     <script src="https://js.cdnbee.com/libs/pangu/3.3.0/pangu.min.js"></script>
