--- a/default.hbs
+++ b/default.hbs
@@ -28,13 +28,13 @@
         <p class="small">Powered by <a href="https://ghost.org" target="_blank">Ghost</a> | Theme - <a href="https://github.com/Windfarer/text" target="_blank">text</a></p>
       </footer>
     </div>
-    <script src="https://js.cdnbee.com/libs/pangu/3.3.0/pangu.min.js"></script>
+    <script src="//cdn.staticfile.org/pangu/3.3.0/pangu.min.js"></script>
     <script>
 	    pangu.spacingElementByClassName('main');
     </script>
-    <script type="text/javascript" src="https://js.cdnbee.com/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="https://js.cdnbee.com/libs/highlight.js/9.9.0/highlight.min.js"></script>
-    <link rel="stylesheet" href="https://js.cdnbee.com/libs/highlight.js/9.9.0/styles/github.min.css">
+    <script type="text/javascript" src="//cdn.staticfile.org/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdn.staticfile.org/highlight.js/9.10.0/highlight.min.js"></script>
+    <link rel="stylesheet" href="//cdn.staticfile.org/highlight.js/9.10.0/styles/github.min.css">
     <script>
       hljs.initHighlightingOnLoad();
     </script>
