--- a/error.hbs
+++ b/error.hbs
@@ -14,7 +14,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
   <meta http-equiv="cleartype" content="on">
-  <link rel="stylesheet" href="{{asset "css/error.css" }}" />
+  <link rel="stylesheet" href="{{asset "css/error.min.css" }}" />
 </head>
 
 <body>
