--- a/default.hbs
+++ b/default.hbs
@@ -8,7 +8,7 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
-    <link rel="stylesheet" type="text/css" href="{{asset "css/application.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/application.min.css"}}" />
     {{ghost_head}}
   </head>
   <body>
