Enhance CSS for pre and code elements
Add styling for <pre> and <code> elements.

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -923,6 +923,10 @@ pre {
   background: #f8f8f8;
 }
 
+pre > code {
+  display: block;
+}
+
 .hljs-line-numbers {
   font-size: 1.2rem;
   line-height: 1.5;
